[package]
name = "kiss-graph-2"
version = "0.1.0"
edition = "2021"

[features]
default = [
  "bevy/bevy_gltf",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.9.1", default-features=false}
bevy_webgl2 = {version="0.4.3", optional=true}

[build-dependencies]
wasm-bindgen-cli = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.69"
